# portfolio-query-engine

./: .env.example  README.md  architecture-note.md  main.py  pyproject.toml  testing-notes.md
core/: config.py  logging_helpers.py
db/: database.py  schemas.py  sessions.py
llm/: llm_services.py
sample_responses/: responses.json
schemas/: portfolio.py  query.py
scripts/: seed_db.py
services/: portfolio.py  query_engine.py
ui/: streamlit_app.py
ui/components/: chat.py  data_table.py  kpi_cards.py  styles.py
ui/utils/: api_client.py
